--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-native": "0.76.3"
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/native": "^7.0.4",
+    "@react-navigation/stack": "^7.0.6",
+    "react": "^18.3.1",
+    "react-native": "^0.76.3",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.20.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-track-player": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
